2014-08-17  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix mirroring of X
	coordinate for hscrolled R2L screen lines.  (Bug#18277)

2014-08-11  Ken Brown  <kbrown@cornell.edu>

	* gmalloc.c (_malloc_mutex, _aligned_blocks_mutex) [CYGWIN]: Use
	ERRORCHECK mutexes.  (Bug#18222)

2014-08-11  Glenn Morris  <rgm@gnu.org>

	* fileio.c: Revert 2013-01-31 change, which chose coding system for
	writing before backing up, since it causes a more serious problem
	than the one it solves.  (Closes Bug#18141, reopens Bug#13522.)
	(choose_write_coding_system): No longer callable from Lisp.
	Move last piece back here from Fwrite_region.
	(Fwrite_region, syms_of_fileio): Update for above changes.

2014-08-09  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fwindow_new_total, Fwindow_new_normal)
	(Fwindow_new_pixel, Fset_window_new_pixel)
	(Fset_window_new_total, Fset_window_new_normal): Second attempt
	to fix the doc-strings of these functions.  See:
	http://lists.gnu.org/archive/html/bug-gnu-emacs/2014-08/msg00287.html

2014-08-08  Martin Rudalics  <rudalics@gmx.at>

	* window.c (Fwindow_valid_p): Fix doc-string (Bug#18194).
	(Fwindow_new_total, Fwindow_normal_size, Fwindow_new_normal)
	(Fwindow_new_pixel, Fset_window_new_pixel)
	(Fset_window_new_total, Fset_window_new_normal)
	(Fwindow_resize_apply): Fix doc-strings (see Bug#18112).

2014-08-07  Eli Zaretskii  <eliz@gnu.org>

	* fontset.c (Finternal_char_font): Recompute basic faces if the
	frame's face cache was cleared.  (Bug#18162)

2014-08-05  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix bug with uninitialized undo list of an indirect buffer (Bug#18180).
	* buffer.c (Fmake_indirect_buffer): Initialize undo list with the
	base buffer's undo list.

2014-08-03  Dmitry Antipov  <dmantipov@yandex.ru>

	Fix bug with an attempt to select uninitialized frame (Bug#18161).
	* xfns.c (Fx_create_frame): Move call to change_frame_size to
	a section where Lisp evaluation is disabled.  This way a pointer