@@ -1,5 +1,12 @@
 2014-08-17  Eli Zaretskii  <eliz@gnu.org>
 
+	* xdisp.c (display_line): Don't assume that the call to
+	reseat_at_next_visible_line_start ends up at a character
+	immediately following the newline on the previous line.  Avoids
+	setting the ends_at_zv_p flag on screen lines that are not at or
+	beyond ZV, which causes infloop in redisplay.  For the details, see
+	http://lists.gnu.org/archive/html/emacs-devel/2014-08/msg00368.html.
+
 	* dispnew.c (buffer_posn_from_coords): Fix mirroring of X
 	coordinate for hscrolled R2L screen lines.  (Bug#18277)
 
